rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax04/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A<T extends List<Boolean>> {
		static boolean m(Object o) { 
			if(o instanceof T) 
				return true;
			return false;
		} 
	}
}